[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/FFFTusj.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/MinistrelPostel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 290.0
margin_top = 129.0
margin_right = 990.0
margin_bottom = 590.0
custom_constants/separation = 120

[node name="TitleLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.878431, 0.141176, 0.141176, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.0941176, 1, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 8
text = "You died :("
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 700.0
margin_bottom = 461.0

[node name="MenuButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 259.0
margin_right = 441.0
margin_bottom = 95.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0941176, 0.501961, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.752941, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.658824, 0, 1 )
enabled_focus_mode = 0
text = "Menu"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 274.0
margin_top = 99.0
margin_right = 426.0
margin_bottom = 194.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0941176, 0.501961, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.752941, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.658824, 0, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true
[connection signal="resized" from="MarginContainer/CenterContainer/VBoxContainer/TitleLabel" to="." method="_on_title_label_resized"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
